# basic

./: .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.doxyfile  TODO.txt  ascii.txt  basic.h  basic_check.ts  binarynum.bas  decimalhex.bas  error.c  fib.bas  interactive.c  interactive.h  lister.c  lister.h  main.c  makefile  normal.bas  parsecommandline.c  readme  scan1.txt  scan2.txt  shape.bas  sortint.bas  sumofints.bas  test.c  tokenizer.c  tokenizer.h  utilities.c  utilities.h
html/: utilities_8h_source.html
include/: basic.h  dtss.h  error.h  interactive.h  lister.h  symboltable.h  tokenizer.h  utilities.h  utilities.h~
src/dtss/: CMakeLists.txt  dtss.c
src/lister/: CMakeLists.txt  lister.c
src/misc/: CMakeLists.txt  banner.c  dtss.c  error.c  interactive.c  lister.c  main.c  parsecommandline.c
src/tokenizer/: CMakeLists.txt  tokenizer.c
src/utilities/: CMakeLists.txt  binarytree.c  makefile  symboltable.c  utilities.c
tests/: ascii.txt  asciicond.txt  dartmouth1stedition.bas  dartmouth2ndedition.bas  dartmouth3rdedition.bas  dartmouth4tedition.bas  dartmouth5thedition.bas  dartmouthnumbers.txt  fib.bas  scan2.txt  scantest1.txt  sortint.bas  sortstring.bas  string1.txt  sumofintsfor.bas  symbols.bas  test.bas  testnums.txt  vars.bas
